log-schemas/27.5/opcua_binary_create_subscription.rst
``opcua_binary_create_subscription`` field reference
----------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``requested_publishing_interval`` (integer - count)
     - The requested_publishing_interval information.

   * - ``requested_lifetime_count`` (integer - count)
     - The requested_lifetime_count information.

   * - ``requested_max_keep_alive_count`` (integer - count)
     - The requested_max_keep_alive_count information.

   * - ``max_notifications_per_publish`` (integer - count)
     - The max_notifications_per_publish information.

   * - ``publishing_enabled`` (boolean - bool)
     - The publishing_enabled information.

   * - ``priority`` (integer - count)
     - The priority information.

   * - ``subscription_id`` (integer - count)
     - The subscription_id information.

   * - ``revised_publishing_interval`` (integer - count)
     - The revised_publishing_interval information.

   * - ``revised_lifetime_count`` (integer - count)
     - The revised_lifetime_count information.

   * - ``revised_max_keep_alive_count`` (integer - count)
     - The revised_max_keep_alive_count information.
